fix: landscape video bug on smaller viewports

--- a/components/SnappingFeed/Slide/Video/index.scss
+++ b/components/SnappingFeed/Slide/Video/index.scss
@@ -48,10 +48,6 @@
         }
 
         @at-root [data-orientation="landscape"]#{&} {
-            width: 100%;
-            max-width: fit-content;
-            height: auto;
-
             @media (max-width: 850px) {
                 height: auto;
                 margin: auto;
